# living-ice-sheet-temperature

./: .gitignore  Makefile  README.md  config.toml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  deploy.yml
docs/: chemistry-kriging.ipynb  chemistry-kriging.md  conductivity-kriging.ipynb  conductivity-kriging.md  index.md  temperature-comparison.ipynb  temperature-comparison.md
docs/api/: borehole.md  client.md  config.md  index.md  temperature.md
frontend/: .prettierrc.json  README.md  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: basins.json  boreholes.json  temperature-sources.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  Map.tsx
frontend/src/hooks/: usePublic.ts
frontend/src/layers/: temperatureLayer.ts
scripts/: check  generate  nbconvert  update-frontend-data  upload
src/list/: client.py  temperature.py
src/living_ice_temperature/: cache.py  client.py  config.py  main.py  models.py  temperature.py
src/livist/: borehole.py  client.py  config.py  main.py  temperature.py
tests/: conftest.py  test_borehole.py  test_models.py  test_temperature.py
tests/data/: FullDataSet_Randomized_head.txt  sample_data.json  waisdivide_imp.csv
