[project]
name = "living-ice-temperature"
version = "0.1.0"
description = "Backend processing for radar-derived ice temperature data in Antarctica"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "geojson-pydantic>=2.1.0",
    "geopandas>=1.1.2",
    "numpy>=2.4.3",
    "obstore>=0.9.1",
    "pandas>=3.0.1",
    "platformdirs>=4.9.4",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pykrige>=1.7.3",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[project.scripts]
living-ice-temperature = "living_ice_temperature.main:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "respx>=0.22.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
