[project]
name = "livist"
version = "0.1.0"
description = "Backend processing for radar-derived ice temperature data in Antarctica"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.2",
    "geojson-pydantic>=2.1.1",
    "geopandas>=1.1.3",
    "numpy>=2.4.4",
    "obstore>=0.9.2",
    "pandas>=3.0.2",
    "platformdirs>=4.9.6",
    "pyarrow>=23.0.1",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pykrige>=1.7.3",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[project.scripts]
livist = "livist.main:cli"

[dependency-groups]
dev = [
    "mkdocstrings-python>=2.0.3",
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "ruff>=0.15.10",
    "ty>=0.0.29",
    "zensical>=0.0.32",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
